- Fixed profile page hanging. - Fixed a bug where two anchor tags would be generated and overlapping, causing weird visuals. - Removed profile.js, as this was used to generate profile-related html.

--- a/CS_23_24/webtech/HW3/static/css/style.css
+++ b/CS_23_24/webtech/HW3/static/css/style.css
@@ -78,6 +78,7 @@ textarea {
 
 .link--simple {
   text-decoration: underline var(--primary) 1px;
+  cursor: pointer;
 }
 
 .link--animation {
@@ -174,6 +175,7 @@ a:hover > nav {
 .header--profile {
   height: 4vh;
   background: var(--accent);
+  z-index: 2;
 }
 
 .header--profile > a {
